--- a/js/templates/employer.hbs
+++ b/js/templates/employer.hbs
@@ -1,35 +1,39 @@
 <div class="cv-container">
   {{#employers}}
-    <div class="employer">
-      <div class="short-info">
-        <h2 class="position">{{position}}</h2>
-        
-        {{#yearfrom}}
-          <span class="yearfrom">{{.}}</span>
-        {{/yearfrom}}
-        {{#if yearfrom}}
-        {{#if yearto}}
-         - 
-        {{/if}}
-        {{/if}}
-        {{#yearto}}
-          <span class="yearto">{{.}}</span>
-        {{/yearto}}
-        
-        <h3><a class="{{company}}" href="{{link}}">{{company}}</a></h3>
+    <div class="employer row">
+      <div class="short-info col-md-4 col-xl-4">
+        <div class="row">
+          <div class="col-sm-6 col-md-12">
+            <h4 class="position">{{position}}</h2>
+            
+            {{#yearfrom}}
+              <span class="yearfrom">{{.}}</span>
+            {{/yearfrom}}
+            {{#if yearfrom}}
+            {{#if yearto}}
+            - 
+            {{/if}}
+            {{/if}}
+            {{#yearto}}
+              <span class="yearto">{{.}}</span>
+            {{/yearto}}
+          </div> <!-- col end -->
+          <div class="col-sm-6 col-md-12">
+            <h5><a class="{{company}}" href="{{link}}">{{company}}</a></h3>
 
-        {{#businesstype}}
-          <span class="company-description">{{.}} based in </span>
-        {{/businesstype}}
+            {{#businesstype}}
+              <span class="company-description">{{.}} based in </span>
+            {{/businesstype}}
 
-        {{#location}}
-          <span>{{.}}</br></span>
-        {{/location}}
-
+            {{#location}}
+              <span>{{.}}</br></span>
+            {{/location}}
+          </div> <!-- col end -->
+        </div> <!-- short info row end -->
       </div>
-      <div class="extended-info">
+      <div class="extended-info col no-gutters">
         {{#responsibilities}}
-          <h3>Responsibilities</h3>
+          <h5>Responsibilities</h3>
           <ul>
             {{#items}}
               <li class="{{tags}}">{{text}}</li>
@@ -37,7 +41,7 @@
           </ul>
         {{/responsibilities}}
         {{#achievements}}
-          <h3>Achievements</h3>
+          <h5>Achievements</h3>
           <ul>
             {{#items}}
               <li class="{{tags}}">{{text}}</li>
