added employer to hbs json file, changes to wp header styling

--- a/sass/_cv.scss
+++ b/sass/_cv.scss
@@ -1,6 +1,8 @@
 .cv-container {
   .employer {
+    margin-bottom: 3rem;
     .short-info {
+      margin-bottom: 2rem;
       float: left;
       h2.position {
         margin-bottom: 0;
