--- a/sass.css
+++ b/sass.css
@@ -2028,30 +2028,31 @@ ul, ol {
       #site-navigation .menu-primary-container ul li {
         width: inherit;
         margin-bottom: inherit;
-        text-align: inherit; }
-        /* line 63, sass/_header-menu.scss */
+        text-align: inherit;
+        font-size: 1.1rem; }
+        /* line 64, sass/_header-menu.scss */
         #site-navigation .menu-primary-container ul li a {
           border: 0;
           padding: 1rem 2rem;
           box-shadow: none; }
-          /* line 67, sass/_header-menu.scss */
+          /* line 68, sass/_header-menu.scss */
           #site-navigation .menu-primary-container ul li a:hover {
             box-shadow: inset 3px 6px 15px -3px rgba(0, 0, 0, 0.2); }
-        /* line 71, sass/_header-menu.scss */
+        /* line 72, sass/_header-menu.scss */
         #site-navigation .menu-primary-container ul li.current-menu-item {
           text-decoration: none;
           color: #4285F4;
           border-bottom-width: 0;
           position: relative;
           z-index: 1; }
-          /* line 78, sass/_header-menu.scss */
+          /* line 79, sass/_header-menu.scss */
           #site-navigation .menu-primary-container ul li.current-menu-item a {
             background: #fafafa;
             margin-bottom: -1rem;
             height: 4rem;
             box-shadow: inset 3px 6px 15px -3px rgba(0, 0, 0, 0.2);
             text-decoration: none; }
-          /* line 85, sass/_header-menu.scss */
+          /* line 86, sass/_header-menu.scss */
           #site-navigation .menu-primary-container ul li.current-menu-item:before {
             content: '';
             height: 1rem;
@@ -2076,19 +2077,22 @@ ul, ol {
     padding-bottom: .6rem;
     background: #222; }
 
-/* line 3, sass/_cv.scss */
-.cv-container .employer .short-info {
-  float: left; }
-  /* line 5, sass/_cv.scss */
-  .cv-container .employer .short-info h2.position {
-    margin-bottom: 0; }
-  /* line 8, sass/_cv.scss */
-  .cv-container .employer .short-info h3 {
-    margin-bottom: 0; }
-
-/* line 12, sass/_cv.scss */
-.cv-container .employer .extended-info {
-  float: left; }
+/* line 2, sass/_cv.scss */
+.cv-container .employer {
+  margin-bottom: 3rem; }
+  /* line 4, sass/_cv.scss */
+  .cv-container .employer .short-info {
+    margin-bottom: 2rem;
+    float: left; }
+    /* line 7, sass/_cv.scss */
+    .cv-container .employer .short-info h2.position {
+      margin-bottom: 0; }
+    /* line 10, sass/_cv.scss */
+    .cv-container .employer .short-info h3 {
+      margin-bottom: 0; }
+  /* line 14, sass/_cv.scss */
+  .cv-container .employer .extended-info {
+    float: left; }
 
 /* line 37, sass/sass.scss */
 a, a:active, a:hover, a:visited {
