--- a/sass/_header-menu.scss
+++ b/sass/_header-menu.scss
@@ -60,6 +60,7 @@
           width: inherit;
           margin-bottom: inherit;
           text-align: inherit;
+          font-size: 1.1rem;
           a {
             border: 0;
             padding: 1rem 2rem;
