--- a/sass/sass.scss
+++ b/sass/sass.scss
@@ -22,6 +22,7 @@ License: Copyright 2018. All Rights Reserved.
 
 @import "bootstrap/bootstrap-grid";
 @import "bootstrap/bootstrap-reboot";
+@import "bootstrap/buttons";
 // @import "bootstrap/normalize";
 @import "bootstrap/type";
 
