--- a/sass/_cv.scss
+++ b/sass/_cv.scss
@@ -13,6 +13,28 @@
     }
     .extended-info { 
       float: left;
+      li {
+        transition: 
+          max-height .3s ease-in-out, 
+          opacity .25s ease-in-out;
+        max-height: 350px;
+        opacity: 100;
+      }
+    }
+  }
+  &.active {
+    .extended-info {
+      li {
+      opacity: 0;
+      max-height: 0;
+      // overflow: hidden;
+      
+      }
+      li[class^="toggled-"], li[class*=" toggled-"] {
+        opacity: 100;
+        max-height: 350px;
+        // overflow: inherit;
+      }
     }
   }
 }
