--- a/sass/_footer.scss
+++ b/sass/_footer.scss
@@ -2,6 +2,8 @@
   background-color: $footer-bg;
   background: $dark-gradient;
   color: $footer-fg;
+  width: 100%;
+  margin-top: auto;
   .content-footer {
     &.footer-main {
       padding-top: 2rem;
