--- a/sass/_cv.scss
+++ b/sass/_cv.scss
@@ -1,4 +1,18 @@
 .cv-container {
+  #cv-toggles{
+    margin-bottom: 2rem;
+    button {
+      margin: 2px;
+    }
+    a {
+      display: block;
+      &.filter-on {
+        color: #000;
+        text-decoration: underline;
+        font-weight: 500;
+      }
+    }
+  }
   .employer {
     margin-bottom: 3rem;
     transition: 
@@ -32,7 +46,7 @@
       // overflow: hidden;
         &[class^="toggled-"], &[class*=" toggled-"] {
           opacity: 100;
-          max-height: 350px;
+          max-height: 100%;
           // overflow: inherit;
         }
       }
