--- a/sass/_cv.scss
+++ b/sass/_cv.scss
@@ -1,6 +1,6 @@
 .cv-container {
   #cv-toggles{
-    margin-bottom: 2rem;
+    margin-bottom: 2em;
     button {
       margin: 2px;
     }
@@ -13,13 +13,13 @@
       }
     }
   }
-  .employer {
-    margin-bottom: 3rem;
+  .cv-item {
+    margin-bottom: 3em;
     transition: 
       max-height .3s ease-in-out, 
       opacity .25s ease-in-out;
     .short-info {
-      margin-bottom: 2rem;
+      margin-bottom: 2em;
       float: left;
       h2.position {
         margin-bottom: 0;
@@ -40,16 +40,21 @@
     }
   }
   &.active {
-    .employer, .extended-info > div, li {
+    .cv-type-container, .cv-item, .extended-info > div, li {
       opacity: 0;
       max-height: 0;
-      // overflow: hidden;
+      margin-bottom: 0;
         &[class^="toggled-"], &[class*=" toggled-"] {
           opacity: 100;
           max-height: 100%;
-          // overflow: inherit;
+         
         }
       }
-    
+      .cv-item {
+        margin-bottom: 0;
+        &[class^="toggled-"], &[class*=" toggled-"] {
+          margin-bottom: 3rem;
+        }
+    }
   }
 }
