added new templates for refs & skills, more information, reworked templater to create only one filter

--- a/js/templates/employers.hbs
+++ b/js/templates/employers.hbs
@@ -42,7 +42,7 @@
             {{#description}}
               <div class="role-description">
                 <h5>Overview</h5>
-                <p>{{.}}</p>
+                <p>{{{.}}}</p>
               </div>
             {{/description}}
             {{#responsibilities}}
@@ -72,6 +72,8 @@
     <div id="cv-community" class="cv-type-container community"> 
     </div>  
     <div id="cv-certifications" class="cv-type-container certifications"> 
+    </div>  
+    <div id="cv-references" class="cv-type-container references"> 
     </div>  
   </div> <!-- end #cv-employer-info-->
 </div> <!-- end #cv-container-->
