--- a/js/templates/tertiaryEducation.hbs
+++ b/js/templates/tertiaryEducation.hbs
@@ -4,8 +4,8 @@
       <div class="cv-item education row {{class}}">
         <div class="short-info col-md-4 col-xl-3">
           <div class="row">
-            <div class="col-sm-6 col-md-12">
-              <h5 class="institution"><a class="{{class}}" href="{{link}}">{{institution}}</a></h5>
+            <div class="col">
+              <h5 class="institution"><a class="{{#class}}cv-{{.}}{{/class}}" href="{{link}}">{{institution}}</a></h5>
               {{#yearfrom}}
                 <span class="yearfrom">{{.}}</span>
               {{/yearfrom}}
