--- a/sass/sass.scss
+++ b/sass/sass.scss
@@ -24,6 +24,7 @@ License: Copyright 2018. All Rights Reserved.
 @import "bootstrap/bootstrap-reboot";
 @import "bootstrap/buttons";
 // @import "bootstrap/normalize";
+@import "bootstrap/utilities";
 @import "bootstrap/type";
 
 @import "variables";
@@ -50,6 +51,9 @@ body {
   & > .site {
     flex-direction: column;
     min-height: 97vh;
+  }
+  #content {
+    
   }
 }
 .emphasize {
